Update Denon-978 lirc config and parse tool

--- a/RC-978.lircd.conf
+++ b/RC-978.lircd.conf
@@ -35,15 +35,25 @@ begin remote
 
 
       begin codes
-          KEY_DIMMER                0x1bf3
-          KEY_PWRON1                0x1c3d
-          KEY_PWRON2                0x5e1c
-          KEY_PWRON3                0x63dd
-          KEY_PWRON4                0x5de3
-          KEY_PWROFF1               0x1c5d
-          KEY_PWROFF2               0x5d1c
-          KEY_PWROFF3               0x63bd
-          KEY_PWROFF4               0x5ee3
+          PWR_ON                0x221c
+          PWR_OFF               0x211c
+          DIMMER                0x1bec
+          KEY_VOLUMEUP          0x223C
+          KEY_VOLUMEDOWN        0x213C
+          KEY_MUTING            0x203c
+
+          5CH7CHSTEREO          0x1854
+          DSPSIMULATION         0x219c
+          STANDARD              0x209c
+          CINEMA                0x12a4
+          MUSIC                 0x11a4
+          DIRECT                0x19e4
+          STEREO                0x1ae4
+          VIRTSURROUND          0x1244
+
+          INPUT_MODE            0x19b4
+          INPUT_ANALOG          0x20ec
+          INPUT_EXTIN           0x1ab4
       end codes
 
 end remote
