--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,7 +1,7 @@
 name: Build and Test
 
 on: 
-  workflow_dispatch
+  workflow_dispatch:
     inputs:
       pytestFlags:
         description: 'PyTest Flags'
